fix error msg spacing + red

--- a/bepas/Content/Site.css
+++ b/bepas/Content/Site.css
@@ -36,3 +36,8 @@ input[type="select"] {
         padding: 0;
     }
 }
+
+/* error msg */
+.validationError {
+    color: red;
+}
